==> sh-mslink/mcu_samples/ReleaseV1.0/开发板/雅特力官方SDK/AT32F4xx_StdPeriph_Lib_V1.1.8/Project/AT_START_F407/Examples/I2C/EEPROM/I2C_EEPROM/i2c_eeprom.c <==
#include "at32f4xx.h"
#include "i2c_eeprom.h"
#include "string.h"
#include "stdbool.h"

void I2C_EE_WriteBuffer(u8* pBuffer, u16 WriteAddr, u16 NumByteToWrite)
{
  if(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF))
  {
    return;
  }
  I2C_pBuffer=pBuffer;
  I2C_WriteAddr=WriteAddr;
  I2C_NumByteToWrite = NumByteToWrite;

  while(I2C_NumByteToWrite>0)
  {
    I2C_EE_WriteOnePage(I2C_pBuffer,I2C_WriteAddr,I2C_NumByteToWrite);
  }
}

void I2C_EE_PageWrite(u8* pBuffer, u16 WriteAddr, u16 NumByteToWrite)
{
#if PROCESS_MODE==0
  sEETimeout = sEE_LONG_TIMEOUT;
	while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF))
	{
	  if((sEETimeout--) == 0) sEE_TIMEOUT_UserCallback();
	}
	 /** Send START condition */
	I2C_GenerateSTART(I2Cx, ENABLE); 
	 /** Test on EV5 and clear it */
  sEETimeout = sEE_LONG_TIMEOUT;
	while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_START_GENERATED))	
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	/** Send EEPROM address for write */ 
	I2C_Send7bitAddress(I2Cx, EEPROM_ADDRESS, I2C_Direction_Transmit); 
	/** Test on EV6 and clear it */ 
  sEETimeout = sEE_LONG_TIMEOUT;
	while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_ADDRESS))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_TRANSMITTER))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	/** Send the EEPROM's internal address to write to */ 
	I2C_SendData(I2Cx, WriteAddr); 
	/** Test on EV8 and clear it */ 
  sEETimeout = sEE_LONG_TIMEOUT;
	while(! I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_DATA_TRANSMITTED))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	/** While there is data to be written */ 
	while(NumByteToWrite--) 
	{ 
   /** Send the current byte */ 
   I2C_SendData(I2Cx, *pBuffer); 
   /** Point to the next byte to be written */ 
   pBuffer++; 
   /** Test on EV8 and clear it */  
   sEETimeout = sEE_LONG_TIMEOUT;
   while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_DATA_TRANSMITTED))
   {
     if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
   }		   
	} 
	/** Send STOP condition */ 
  I2C_GenerateSTOP(I2Cx, ENABLE); 
  I2C_EE_WaitEepromStandbyState();
  I2C_EE_WriteOnePageCompleted();

#elif PROCESS_MODE==1
	/** initialize static parameter */
	MasterDirection = Transmitter;
	i2c_comm_state = COMM_PRE;
	/** initialize static parameter according to input parameter */ 
	SlaveADDR = EEPROM_ADDRESS; /// this byte shoule be send by F/W (in loop or ISR way)
	DeviceOffset = WriteAddr; /// this byte can be send by both F/W and DMA
	OffsetDone = FALSE;  
	memcpy(SendBuf,pBuffer,NumByteToWrite);	
	BufCount=0;
	Int_NumByteToWrite=NumByteToWrite;
	I2C_AcknowledgeConfig(I2C1, ENABLE);
	I2C_INTConfig(I2C1, I2C_INT_EVT | I2C_INT_BUF | I2C_INT_ERR, ENABLE);

	/** Send START condition */
  sEETimeout = sEE_LONG_TIMEOUT;
	while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	I2C_GenerateSTART(I2C1, ENABLE);
  I2C_EE_WaitOperationIsCompleted();
  I2C_EE_WriteOnePageCompleted();
 
#elif PROCESS_MODE==2
  DMA_InitType  DMA_InitStructure;
  NVIC_InitType NVIC_InitStructure;
	/** DMA initialization */
	DMA_Reset(DMA1_Channel6);
	DMA_InitStructure.DMA_PeripheralBaseAddr = (u32)&I2Cx->DT;/// (u32)I2C1_DR_Address;
	DMA_InitStructure.DMA_MemoryBaseAddr = (u32)pBuffer; /// from function input parameter
	DMA_InitStructure.DMA_Direction = DMA_DIR_PERIPHERALDST; /// fixed for send function
	DMA_InitStructure.DMA_BufferSize = NumByteToWrite; /// from function input parameter
	DMA_InitStructure.DMA_PeripheralInc = DMA_PERIPHERALINC_DISABLE; // fixed
	DMA_InitStructure.DMA_MemoryInc = DMA_MEMORYINC_ENABLE; /// fixed
	DMA_InitStructure.DMA_PeripheralDataWidth = DMA_MEMORYDATAWIDTH_BYTE; ///fixed
	DMA_InitStructure.DMA_MemoryDataWidth = DMA_MEMORYDATAWIDTH_BYTE; ///fixed
	DMA_InitStructure.DMA_Mode = DMA_MODE_NORMAL; /// fixed
	DMA_InitStructure.DMA_Priority = DMA_PRIORITY_VERYHIGH;  /// up to user
	DMA_InitStructure.DMA_MTOM = DMA_MEMTOMEM_DISABLE; /// fixed
	
	DMA_Init(DMA1_Channel6, &DMA_InitStructure);
	DMA_INTConfig(DMA1_Channel6, DMA_INT_TC, ENABLE);
	
	NVIC_InitStructure.NVIC_IRQChannel = DMA1_Channel6_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);
		    
  i2c_comm_state = COMM_PRE;
  sEETimeout = sEE_LONG_TIMEOUT;
	while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	 /** Send START condition */
	I2C_GenerateSTART(I2Cx, ENABLE); 
	 /** Test on EV5 and clear it */
  sEETimeout = sEE_LONG_TIMEOUT;
	while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_START_GENERATED))	
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	/** Send EEPROM address for write */ 
	I2C_Send7bitAddress(I2Cx, EEPROM_ADDRESS, I2C_Direction_Transmit); 
	/** Test on EV6 and clear it */ 
  sEETimeout = sEE_LONG_TIMEOUT;
	while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_ADDRESS))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_TRANSMITTER))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}
	/** Send the EEPROM's internal address to write to */ 
	I2C_SendData(I2Cx, WriteAddr); 
	/** Test on EV8 and clear it */ 
  sEETimeout = sEE_LONG_TIMEOUT;
	while(! I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_DATA_TRANSMITTED))
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}		
 
  I2C_DMACmd(I2C1, ENABLE);
  DMA_ChannelEnable(DMA1_Channel6, ENABLE);
  sEETimeout = sEE_LONG_TIMEOUT;
	while(i2c_comm_state!=COMM_IN_PROCESS)
	{
	  if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
	}		 
  I2C_EE_WaitEepromStandbyState();
  I2C_EE_WriteOnePageCompleted();
#endif 
}

void i2c1_evt_handle(void)
{  
  uint32_t lastevent=  I2C_GetLastEvent(I2C1);
  switch (lastevent)
  {
    /** Master Invoke */
    case I2C_EVENT_MASTER_START_GENERATED:    /// EV5
      if(!check_begin)
      {
        i2c_comm_state = COMM_IN_PROCESS;
      }
      if (MasterDirection == Receiver)
      {
        if (!OffsetDone)
        {
          I2C_Send7bitAddress(I2C1,SlaveADDR,I2C_Direction_Transmit);
        }   
        else
        {
          /** Send slave Address for read */
          I2C_Send7bitAddress(I2C1,SlaveADDR,I2C_Direction_Receive);      
          OffsetDone = FALSE;
        }
      }
      else
      {
        /** Send slave Address for write */
        I2C_Send7bitAddress(I2C1,SlaveADDR,I2C_Direction_Transmit);
      }
    break;
    /** Master Receiver events */
    case I2C_EVENT_MASTER_ADDRESS_WITH_RECEIVER:  /// EV6
    break;
    case I2C_EVENT_MASTER_DATA_RECEIVED:    /// EV7
      *I2C_pBuffer = I2C_ReceiveData(I2C1);
      I2C_pBuffer++;
      Int_NumByteToRead--;
      if(Int_NumByteToRead==1) 
      {
        /** Disable Acknowledgement */ 
        I2C_AcknowledgeConfig(I2C1, DISABLE); 
        I2C_GenerateSTOP(I2C1, ENABLE);
      }
      if(Int_NumByteToRead==0) 
      {
        I2C_INTConfig(I2C1, I2C_INT_EVT | I2C_INT_BUF |I2C_INT_ERR, DISABLE);
        i2c_comm_state = COMM_DONE;
      }
    break;
    /** Master Transmitter events */
    case I2C_EVENT_MASTER_ADDRESS|I2C_EVENT_MASTER_TRANSMITTER:  /// EV8 just after EV6
      if (check_begin)
      {
        check_begin = FALSE;
        I2C_INTConfig(I2C1, I2C_INT_EVT | I2C_INT_BUF |I2C_INT_ERR, DISABLE);
        I2C_GenerateSTOP(I2C1, ENABLE);
        i2c_comm_state = COMM_DONE;
        break;
      }
      I2C_SendData(I2C1, DeviceOffset);
      OffsetDone = TRUE;
    break;
    case I2C_EVENT_MASTER_DATA_TRANSMITTING:   ///  EV8 I2C_EVENT_MASTER_DATA_TRANSMITTING
      if (MasterDirection == Receiver)
      {
        I2C_GenerateSTART(I2C1, ENABLE);
      }
    break;
    case I2C_EVENT_MASTER_DATA_TRANSMITTED:    /// EV8-2 
      if (MasterDirection == Transmitter)
      {
        if(Int_NumByteToWrite==0)
        {    
          I2C_GenerateSTOP(I2C1, ENABLE); 
          sEETimeout = sEE_LONG_TIMEOUT;
          while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF))
          {
            if((sEETimeout--) == 0) sEE_TIMEOUT_UserCallback();     
          }
          check_begin = TRUE;
          I2C_GenerateSTART(I2C1, ENABLE);
        }else
        {
          I2C_SendData(I2C1, SendBuf[BufCount++]);
          Int_NumByteToWrite--;    
        }
      }
    break;
  }
}

void i2c1_err_handle(void)
{
  if (I2C_GetFlagStatus(I2C1, I2C_FLAG_ACKFAIL))
  {
    if (check_begin) /// EEPROM write busy
    {
      I2C_GenerateSTART(I2C1, ENABLE);
    }
    else if (I2C1->STS2 &0x01) /// real fail
    {	
      I2C_GenerateSTOP(I2C1, ENABLE);
      i2c_comm_state = COMM_EXIT;
    }
    I2C_ClearFlag(I2C1, I2C_FLAG_ACKFAIL);
  }

  if (I2C_GetFlagStatus(I2C1, I2C_FLAG_BUSERR))
  {
    if (I2C1->STS2 &0x01)
    {
      I2C_GenerateSTOP(I2C1, ENABLE);
      i2c_comm_state = COMM_EXIT;
    }
    I2C_ClearFlag(I2C1, I2C_FLAG_BUSERR);
  }
}

void i2c1_send_dma_handle()
{
  if (DMA_GetFlagStatus(DMA1_FLAG_TC6))
  {
    if (I2Cx->STS2 & 0x01) /// master send DMA finish, check process later
    {
      /** DMA1-6 (I2Cx Tx DMA)transfer complete ISR */
      I2C_DMACmd(I2Cx, DISABLE);
      DMA_ChannelEnable(DMA1_Channel6, DISABLE);
      /** wait until BTF */
      while(!I2C_GetFlagStatus(I2Cx, I2C_FLAG_BTFF));
      I2C_GenerateSTOP(I2Cx, ENABLE);
      /** wait until BUSY clear */
      while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF));   
      i2c_comm_state = COMM_IN_PROCESS;
    }
    else /// slave send DMA finish
    {
    }
    DMA_ClearFlag(DMA1_FLAG_TC6);
  }
  if (DMA_GetFlagStatus(DMA1_FLAG_GL6))
  {
    DMA_ClearFlag( DMA1_FLAG_GL6);
  }
  if (DMA_GetFlagStatus(DMA1_FLAG_HT6))
  {
    DMA_ClearFlag( DMA1_FLAG_HT6);
  }
}

void i2c1_receive_dma_handle(void)
{
  if (DMA_GetFlagStatus(DMA1_FLAG_TC7))
  {
    if (I2Cx->STS2 & 0x01) /// master receive DMA finish
    {
      I2C_DMACmd(I2Cx, DISABLE);
      I2C_GenerateSTOP(I2Cx, ENABLE);
      i2c_comm_state = COMM_DONE;
    }
    else /// slave receive DMA finish
    {
    }
    DMA_ClearFlag(DMA1_FLAG_TC7);
  }
  if (DMA_GetFlagStatus(DMA1_FLAG_GL7))
  {
    DMA_ClearFlag( DMA1_FLAG_GL7);
  }
  if (DMA_GetFlagStatus(DMA1_FLAG_HT7))
  {
    DMA_ClearFlag( DMA1_FLAG_HT7);
  }
}

void I2C_EE_WaitEepromStandbyState(void)
{

	__IO uint16_t tmpSR1 = 0;
  __IO uint32_t sEETrials = 0;

  /** While the bus is busy */
  sEETimeout = sEE_LONG_TIMEOUT;
  while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSYF))
  {
    if((sEETimeout--) == 0) sEE_TIMEOUT_UserCallback();     
  }

  /** Keep looping till the slave acknowledge his address or maximum number 
     of trials is reached (this number is defined by sEE_MAX_TRIALS_NUMBER) */
  while (1)
  {
    /** Send START condition */
    I2C_GenerateSTART(I2Cx, ENABLE);

    /** Test on EV5 and clear it */
    sEETimeout = sEE_LONG_TIMEOUT;
    while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_START_GENERATED))
    {
      if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
    }    

    /** Send EEPROM address for write */
    I2C_Send7bitAddress(I2Cx, EEPROM_ADDRESS, I2C_Direction_Transmit); 
    /** Wait for ADDR flag to be set (Slave acknowledged his address) */
    sEETimeout = sEE_LONG_TIMEOUT;
    do
    {     
      /** Get the current value of the SR1 register */
      tmpSR1 = I2Cx->STS1;
      
      /** Update the timeout value and exit if it reach 0 */
      if((sEETimeout--) == 0)  sEE_TIMEOUT_UserCallback();
    }
    /** Keep looping till the Address is acknowledged or the AF flag is 
       set (address not acknowledged at time) */
    while((tmpSR1 & (I2C_STS1_ADDRF | I2C_STS1_ACKFAIL)) == 0);
     
    /** Check if the ADDR flag has been set */
    if (tmpSR1 & I2C_STS1_ADDRF)
    {
      /** Clear ADDR Flag by reading SR1 then SR2 registers (SR1 have already 
         been read) */
      (void)I2Cx->STS2;
      
      /** STOP condition */    
      I2C_GenerateSTOP(I2Cx, ENABLE);
        
      /** Exit the function */
      return;
    }
    else
    {
      /** Clear AF flag */
      I2C_ClearFlag(I2Cx, I2C_FLAG_ACKFAIL);                  
    }
    
    /** Check if the maximum allowed numbe of trials has bee reached */
    if (sEETrials++ == sEE_MAX_TRIALS_NUMBER)
    {
      /** If the maximum number of trials has been reached, exit the function */
       sEE_TIMEOUT_UserCallback();
    }
  }
}
